--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       </nav>
       <div class="one">
         <h1>FANTA</h1>
-        <img id="orange-cut" src="Assets/orange2.png" alt="" />
-        <img id="fanta" src="Assets/fanta.png" alt="" />
-        <img id="orange" src="Assets/orange.webp" alt="" />
-        <img id="leaf" src="Assets/leaf.webp" alt="" />
-        <img id="leaf2" src="Assets/leaf2.png" alt="" />
-        <img id="leaf3" src="Assets/coconoutleaf.png" alt="" />
+        <img id="orange-cut" src="orange2.png" alt="" />
+        <img id="fanta" src="fanta.png" alt="" />
+        <img id="orange" src="orange.webp" alt="" />
+        <img id="leaf" src="leaf.webp" alt="" />
+        <img id="leaf2" src="leaf2.png" alt="" />
+        <img id="leaf3" src="coconoutleaf.png" alt="" />
       </div>
       <div class="two">
         <div class="lft-two">
@@ -60,8 +60,8 @@
       </div>
       <div class="three">
         <div class="card">
-          <img class="lemon lemon1" src="Assets/lemon.webp" alt="" />
-          <img id="cocacola" src="Assets/cocacola.png" alt="" />
+          <img class="lemon lemon1" src="lemon.webp" alt="" />
+          <img id="cocacola" src="cocacola.png" alt="" />
           <h1>CocaCola</h1>
           <button>Buy Now</button>
         </div>
@@ -70,8 +70,8 @@
           <button>Buy Now</button>
         </div>
         <div class="card">
-          <img class="lemon lemon2" src="Assets/lemon.webp" alt="" />
-          <img id="pepsi" src="Assets/pepsi.png" alt="" />
+          <img class="lemon lemon2" src="lemon.webp" alt="" />
+          <img id="pepsi" src="pepsi.png" alt="" />
           <h1>Pepsi</h1>
           <button>Buy Now</button>
         </div>
